<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bordado_vistafondo"> <!-- Fondo negro semitransparente -->

    <LinearLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:elevation="8dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bordado_vistacuenta"> <!-- Fondo blanco del cuadro de login -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_iniciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imagenbutton"
            android:fontFamily="@font/bangers"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            tools:ignore="ImageContrastCheck" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="185dp"
            android:layout_height="112dp"
            android:src="@drawable/noregister"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/permanent_marker"
        android:hint="@string/nombre_de_usuario" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/permanent_marker"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_marginBottom="15dp"
            android:layout_width="184dp"
            android:fontFamily="@font/permanent_marker"
            android:textColor="@color/black"
            android:background="@drawable/bordado_play"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="184dp"
            android:fontFamily="@font/permanent_marker"
            android:textColor="@color/black"
            android:background="@drawable/bordado_config"
            android:layout_height="wrap_content"
            android:text="@string/registrar" />

    </LinearLayout>
</RelativeLayout>