<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/confi"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PLAY"
        android:layout_width="171sp"
        android:layout_height="60sp"
        android:background="@drawable/bordado_play"
        android:paddingLeft="2sp"
        android:fontFamily="@font/bangers"
        android:text="@string/jugar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Config"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordado_config"
        android:fontFamily="@font/bangers"
        android:gravity="bottom"
        android:paddingBottom="5sp"
        android:text="@string/config"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Exit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/exit"
        android:textColor="#000000"
        android:textColorLink="#813B3B"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        tools:ignore="RtlCompat"
        android:background="@drawable/bordado_exit"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Titleborder"
        android:layout_width="350sp"
        android:layout_height="100dp"
        android:fontFamily="@font/bangers"
        android:gravity="bottom"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#E0000000"
        android:textSize="80sp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Title"
        android:layout_width="350sp"
        android:layout_height="100dp"
        android:fontFamily="@font/bangers"
        android:gravity="bottom"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoretextborder"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="bottom"
        android:paddingBottom="-20sp"
        android:text="@string/scoretext"
        android:textAlignment="center"
        android:textColor="@color/play"
        android:textSize="36sp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoreborder"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:paddingBottom="-20sp"
        android:text="@string/score"
        android:textColor="@color/play"
        android:textSize="36sp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoretext"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="bottom"
        android:paddingBottom="-20sp"
        android:text="@string/scoretext"
        android:textAlignment="center"
        android:textColor="@color/score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:paddingBottom="-20sp"
        android:text="@string/score"
        android:textColor="@color/score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="RtlCompat,TextContrastCheck,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/money"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:paddingBottom="-20sp"
        android:text="@string/moneyactual"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="RtlCompat,TextSizeCheck,VisualLintOverlap" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonmoneda"
        android:layout_width="115dp"
        android:layout_height="80dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imagenbutton"
        android:scaleType="centerInside"
        android:src="@drawable/moneda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttontienda"
        android:layout_width="131dp"
        android:layout_height="100dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imagenbutton"
        android:scaleType="centerInside"
        android:src="@drawable/tienda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>